ProductReviewResponse was renamed to ProductReviewDto
