# src/main/java/com/zufar/icedlatte/review/converter/ProductReviewDtoConverter.java
@@ -1,6 +1,6 @@
 package com.zufar.icedlatte.review.converter;
 
-import com.zufar.icedlatte.openapi.dto.ProductReviewResponse;
+import com.zufar.icedlatte.openapi.dto.ProductReviewDto;
 import com.zufar.icedlatte.openapi.dto.ProductReviewsAndRatingsWithPagination;
 import com.zufar.icedlatte.openapi.dto.RatingMap;
 import com.zufar.icedlatte.review.entity.ProductReview;
@@ -12,11 +12,11 @@ import java.util.List;
 @Service
 public class ProductReviewDtoConverter {
 
-    public static final ProductReviewResponse EMPTY_PRODUCT_REVIEW_RESPONSE =
-            new ProductReviewResponse(null, null, null, null, null, null);
+    public static final ProductReviewDto EMPTY_PRODUCT_REVIEW_RESPONSE =
+            new ProductReviewDto(null, null, null, null, null, null);
 
-    public ProductReviewResponse toReviewResponse(ProductReview productReview) {
-        return new ProductReviewResponse(
+    public ProductReviewDto toReviewResponse(ProductReview productReview) {
+        return new ProductReviewDto(
                 productReview.getId(),
                 productReview.getProductRating(),
                 productReview.getText(),
@@ -25,7 +25,7 @@ public class ProductReviewDtoConverter {
                 productReview.getUser().getLastName());
     }
 
-    public ProductReviewsAndRatingsWithPagination toProductReviewsAndRatingsWithPagination(final Page<ProductReviewResponse> page) {
+    public ProductReviewsAndRatingsWithPagination toProductReviewsAndRatingsWithPagination(final Page<ProductReviewDto> page) {
         var result = new ProductReviewsAndRatingsWithPagination();
         result.setPage(page.getTotalPages());
         result.setSize(page.getSize());
